--- a/index.html
+++ b/index.html
@@ -271,6 +271,14 @@
             </div>
 
             <div class="card">
+              <img src="./assets/images/ajazgraphic.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h4 class="card-title">Ajaz Graphic Designer</h4>
+                <a href="https://aaweshmanyar.github.io/gcreative007/" target="_blank" class="btn btn-primary">Visit Here</a>
+              </div>
+            </div>
+
+            <div class="card">
               <img src="./assets/images/InvestIQ.jpeg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h4 class="card-title">InvestIQ</h4>
