--- a/index.html
+++ b/index.html
@@ -65,6 +65,10 @@
             </li>
 
             <li>
+              <a href="#portfolio" class="navbar-link" data-navbar-link>Projects</a>
+            </li>
+
+            <li>
               <a href="https://ipgeniustech.com/" class="navbar-link" data-navbar-link>Website↗️</a>
             </li>
 
@@ -236,7 +240,7 @@
 
       <!-- Our projects -->
 
-      <div class="cards-section" data-aos="zoom-in">
+      <div class="cards-section" data-aos="zoom-in" id="portfolio">
         <h2 class="h2 cards-heading">Our Projects</h2>
 
         <div class="cards-start">
@@ -266,7 +270,7 @@
               <img src="./assets/images/sa.JPG" class="card-img-top" alt="...">
               <div class="card-body">
                 <h4 class="card-title">Sapienoids</h4>
-                <a href="https://sapienoids.com/" target="_blank" class="btn btn-primary">Visit Here</a>
+                <a href="https://sapienoids.com/" target="_blank" class="btn btn-primary">Working</a>
               </div>
             </div>
 
@@ -330,7 +334,7 @@
                   <ion-icon name="checkmark-outline"></ion-icon>
                 </div>
 
-                <h3 class="h3 service-item-title">Web Developer</h3>
+                <h3 class="h3 service-item-title">Web Development</h3>
 
               </li>
 
@@ -350,7 +354,7 @@
                   <ion-icon name="checkmark-outline"></ion-icon>
                 </div>
 
-                <h3 class="h3 service-item-title">Android Apps Development</h3>
+                <h3 class="h3 service-item-title"> App Development</h3>
 
               </li>
 
@@ -360,7 +364,7 @@
                   <ion-icon name="checkmark-outline"></ion-icon>
                 </div>
 
-                <h3 class="h3 service-item-title">Ui/Ux</h3>
+                <h3 class="h3 service-item-title">UI/UX Design</h3>
 
               </li>
 
@@ -386,7 +390,7 @@
                   <ion-icon name="checkmark-outline"></ion-icon>
                 </div>
 
-                <h3 class="h3 service-item-title">Ui/UX Design </h3>
+                <h3 class="h3 service-item-title">Graphic Design </h3>
 
               </li>
 
